[tool.poetry]
name = "delaunayextrapolation"
version = "0.1.3"
description = "Delaunay Extrapolation."
authors = ["vitroid <vitroid@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.14.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
numpy = "^2.0.1"
matplotlib = "^3.9.1.post1"
plotly = "^5.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
